--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,6 +1,9 @@
+---
+permalink: none
+---
 @charset 'UTF-8';
-@import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700");
+@import url("{{ site.url }}/css/font-awesome.min.css");
+@import url("{{ site.url }}/css/google-fonts.css");
 
 /*
 	Striped by HTML5 UP
@@ -15,7 +18,7 @@
 	body
 	{
 		background-color: #e8e8e8;
-		background-image: url('images/bg02.png');
+		background-image: url('{{ site.url }}/css/images/bg02.png');
 	}
 
 		body.is-loading * {
@@ -300,7 +303,7 @@
 		{
 			cursor: pointer;
 			background-color: #c94663;
-			background-image: url('images/bg01.png');
+			background-image: url('{{ site.url }}/css/images/bg01.png');
 			border-radius: 0.4em;
 			text-align: center;
 			box-shadow: inset 0px 0px 0px 1px rgba(255,255,255,0.15);
@@ -421,7 +424,7 @@
 					text-decoration: none;
 					color: inherit;
 					background-color: #e8e8e8;
-					background-image: url('images/bg02.png');
+					background-image: url('{{ site.url }}/css/images/bg02.png');
 					color: #565656;
 					margin: 0 0.4em 0 0;
 					border-radius: 0.4em;
@@ -530,7 +533,7 @@
 				.box.calendar td.today a
 				{
 					background-color: #c94663;
-					background-image: url('images/bg01.png');
+					background-image: url('{{ site.url }}/css/images/bg01.png');
 					box-shadow: inset 0px 0px 0px 1px rgba(255,255,255,0.15), 0 0.025em 0.15em 0em rgba(0,0,0,0.25);
 					color: #fff !important;
 				}
@@ -821,7 +824,7 @@
 	{
 		position: relative;
 		background-color: #fff;
-		background-image: url('images/bg02.png');
+		background-image: url('{{ site.url }}/css/images/bg02.png');
 	}
 	
 		#content > .inner
@@ -865,7 +868,7 @@
 
 	#titleBar
 	{
-		background: #364050 url('images/bg01.png');
+		background: #364050 url('{{ site.url }}/css/images/bg01.png');
 	}
 
 	#titleBar .title
@@ -909,7 +912,7 @@
 			width: 50px;
 			height: 30px;
 			line-height: 30px;
-			background: #c94663 url('images/bg01.png');
+			background: #c94663 url('{{ site.url }}/css/images/bg01.png');
 			border-radius: 5px;
 			color: #fff;
 			text-align: center;
@@ -928,5 +931,6 @@
 
 	#sidePanel
 	{
-		background: #364050 url('images/bg01.png');
+		background: #364050 url('{{ site.url }}/css/images/bg01.png');
 	}
+
