--- a/source/css/style-wide.css
+++ b/source/css/style-wide.css
@@ -79,7 +79,7 @@
 						margin: 0 0 0.75em 0;
 					}
 
-						.box.post .info .date .year,
+						.box.post .info .date .year-separator,
 						.box.post .info .date .month span
 						{
 							display: none;
@@ -88,7 +88,7 @@
 						.box.post .info .date .day
 						{
 							display: block;
-							margin: 0.25em 0 0 0;
+							margin: 0.25em 0 0.25em 0;
 							font-size: 1.5em;
 							font-weight: 700;
 							color: #1b252a;
@@ -144,3 +144,8 @@
 			margin-right: 14em; /* = sidebar width */
 			margin-left: 7em;
 		}
+
+/* personal-edit */
+.info-icons {
+    font-size: 3em;
+}
